# bff_test_automation

./: .gitignore  README.md  conftest.py  delete_orphaned_crops.py  delete_orphaned_skus.py  pyproject.toml
lib/: README.md  clients.py  colors.py  core.py  crops_skus.py  devices.py  perception.py  product_quality.py  production_actions.py  production_workcenters.py  production_workspaces.py  utils.py
plentyservice/: __init__.py  auth.py  base_client.py  builder.py  cli.py  clients.py  common.py  constants.py  debug.py  jwt_util.py  logging.py  models.py  request_error.py  rpc.py  session_wrapper.py  testing_utils.py
plentyservice/alert_service/: client.py  models.py
plentyservice/device_management_service/: client.py
plentyservice/environment_service/: client.py
plentyservice/executive_service/: client.py
plentyservice/farm_def_service/: client.py
plentyservice/farm_state_service/: client.py
plentyservice/lab_testing_service/: client.py
plentyservice/location_service/: client.py
plentyservice/perception_object_service/: client.py
plentyservice/product_quality_service/: client.py
plentyservice/traceability_service/: client.py
plentyservice/traceability_store/: client.py
plentyservice/user_store/: client.py  models.py
plentyservice/varietal_information_service/: client.py
plentyservice/workbin_service/: client.py
results/: junit.xml  report.html
tests/: test_core.py  test_crops_skus.py  test_devices.py  test_lab_testing.py  test_perception.py  test_product_quality.py  test_production_actions.py  test_production_maps.py  test_production_resources.py  test_production_workcenters.py  test_production_workspaces.py
